--- a/src/components/Email/EmailPageDescription.scss
+++ b/src/components/Email/EmailPageDescription.scss
@@ -4,7 +4,7 @@
 }
 
 .header_template_button {
-    background-color: var(--green-500, #22C55E) !important;
+    background-color: var(--green-500, #22c55e) !important;
     border-radius: 12px;
     font-size: 14px;
     font-weight: 600;
