--- a/src/components/SideNav/SideNav.scss
+++ b/src/components/SideNav/SideNav.scss
@@ -34,9 +34,7 @@
 
     @media (max-width: 1024px) {
         width: 0;
-        transition:
-            transform 200ms ease,
-            width 200ms ease;
+        transition: transform 200ms ease, width 200ms ease;
         transform: translateX(-400px);
         margin-right: -30px;
 
